Oracle / OpenJDK parallel gc: support combination of -XX:+PrintGCCause and -XX:+PrintTenuringDistribution (#140)